--- a/assets/select.css
+++ b/assets/select.css
@@ -61,6 +61,7 @@
 .rc-tree-select-selection--single .rc-tree-select-selection__rendered {
   display: block;
   overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
   padding-left: 10px;
   padding-right: 20px;
